test/conformance/chainsaw/validating-policies/subresources/block-ephemeral-containers/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: block-ephemeral-containers
spec:
  validationActions: 
    - Deny
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods","pods/ephemeralcontainers"]
  validations:
   - expression: >-
      object.spec.?ephemeralContainers.orValue([]).size() == 0
     message: "Ephemeral (debug) containers are not permitted."
