test/conformance/chainsaw/validating-policies/subresources/block-ephemeral-containers/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-ephemeral-containers
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: block-ephemeral-containers
  - name: create pod
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod.yaml
  - name: create ephemeral container
    try:
    - script:
        content: if kubectl -n test-vpol-subresource-namespace debug -it test-pod --image=busybox:1.35 --target=busybox; then exit 1; else exit 0; fi;
        # check:
        #   ($error): >-
        #     admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy block-ephemeral-containers failed: Ephemeral (debug) containers are not permitted.
